Updated SSRN module and added a few more features to its UI Added UI and singleton for UAA

--- a/products/RAT-STATS/rstats_ui/CMakeLists.txt
+++ b/products/RAT-STATS/rstats_ui/CMakeLists.txt
@@ -47,6 +47,7 @@ qt5_use_modules(${CURR_TARGET}
                  Widgets)
 
 add_dependencies(${CURR_TARGET}
-                 rstats_utils)
+                 rstats_utils
+                 Qt5::Widgets)
 
 
