--- a/products/RAT-STATS/rstats_modules/UnrestrictedVariableAppraisal/CMakeLists.txt
+++ b/products/RAT-STATS/rstats_modules/UnrestrictedVariableAppraisal/CMakeLists.txt
@@ -1,16 +1,19 @@
-
 #==============================================================================
-# CMakeLists file for module_rstats_uva
+# CMakeLists file for module_va_unrestricted
 #==============================================================================
-cmake_minimum_required(VERSION 3.0)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CURR_TARGET module_va_unrestricted)
-project(${CURR_TARGET})
-set(CURR_TARGET_SOURCES "${CURR_TARGET}_SOURCES")
-set(CURR_TARGET_HEADERS "${CURR_TARGET}_HEADERS")
-
-include_directories(inc)
 include(${CMAKE_MODULE_PATH}/flags.cmake)
+
+set(CURR_TARGET_SOURCES "${CURR_TARGET}_SOURCES")
+set(CURR_TARGET_FORMS "${CURR_TARGET}_FORMS")
+set(CURR_TARGET_HEADERS "${CURR_TARGET}_HEADERS")
+set(CURR_TARGET_HEADERS_NO_MOC "${CURR_TARGET}_HEADERS_NO_MOC")
+set(CURR_TARGET_RESOURCES "${CURR_TARGET}_RESOURCES")
+
+include_directories(src)
+include_directories(inc)
+include_directories(resx)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -23,25 +26,43 @@ find_package(Qt5Widgets REQUIRED)
 #==============================================================================
 file(GLOB CURR_TARGET_SOURCES "src/*.cpp")
 file(GLOB CURR_TARGET_HEADERS "inc/*.h*")
+file(GLOB CURR_TARGET_FORMS "src/*.ui")
 
 #==============================================================================
 # Add Executable
 #==============================================================================
 add_executable(${CURR_TARGET}
+               ${PLATFORM}
                ${CURR_TARGET_SOURCES}
                ${CURR_TARGET_HEADERS}
+               ${CURR_TARGET_FORMS}
                )
 
 #==============================================================================
 # Add Dependencies
 #==============================================================================
 
-#add_dependencies(${CURR_TARGET}  )
+qt5_use_modules(${CURR_TARGET}
+                 Widgets)
+
+add_dependencies(${CURR_TARGET}
+                    rstats_ui
+                    Qt5::Widgets
+                    rstats_utils
+                    common_utils
+                 )
 
 #==============================================================================
 # Target Link Libraries
 #==============================================================================
-#target_link_libraries(${CURR_TARGET})
+target_link_libraries(${CURR_TARGET}
+                        rstats_ui
+                        Qt5::Widgets
+                        rstats_utils
+                        common_utils
+)
+
+
 
 
 
