Pushed over changes from sun server Added GooeyFiBuilder project

--- a/products/GooeyFi/gooeyfi_builder/CMakeLists.txt
+++ b/products/GooeyFi/gooeyfi_builder/CMakeLists.txt
@@ -1,22 +1,18 @@
-
 #==============================================================================
-# CMakeLists file for CMake rstats_main
+# CMakeLists file for gooeyfi_builder
 #==============================================================================
 cmake_minimum_required(VERSION 3.0)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CURR_TARGET rstats)
+set(CURR_TARGET gooeyfi_builder)
 
 set(CURR_TARGET_SOURCES "${CURR_TARGET}_SOURCES")
 set(CURR_TARGET_FORMS "${CURR_TARGET}_FORMS")
 set(CURR_TARGET_HEADERS "${CURR_TARGET}_HEADERS")
-set(CURR_TARGET_HEADERS_NO_MOC "${CURR_TARGET}_HEADERS_NO_MOC")
 set(CURR_TARGET_RESOURCES "${CURR_TARGET}_RESOURCES")
 
 include_directories(src)
 include_directories(inc)
-include_directories(resx)
-
-include(${CMAKE_MODULE_PATH}/flags.cmake)
+include_directories(res)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -28,15 +24,15 @@ find_package(Qt5Widgets REQUIRED)
 # Include Source Files
 #==============================================================================
 file(GLOB CURR_TARGET_SOURCES "src/*.cpp")
-file(GLOB CURR_TARGET_HEADERS "inc/*.h*")
 file(GLOB CURR_TARGET_FORMS "src/*.ui")
+file(GLOB CURR_TARGET_HEADERS "inc/*.h*")
 file(GLOB CURR_TARGET_RESOURCES "resx/*.qrc")
 
 #==============================================================================
 # Add Executable
 #==============================================================================
-add_executable(${CURR_TARGET}
-			   ${PLATFORM}
+add_library(${CURR_TARGET}
+              ${LIBRARY_MODE}
                ${CURR_TARGET_SOURCES}
                ${CURR_TARGET_HEADERS}
                ${CURR_TARGET_FORMS}
@@ -44,47 +40,16 @@ add_executable(${CURR_TARGET}
                )
 
 #==============================================================================
-# Add Dependencies
+#Add Dependencies
 #==============================================================================
 
 qt5_use_modules(${CURR_TARGET}
                  Widgets)
 
 add_dependencies(${CURR_TARGET}
-                rstats_ui
-                gooeyfi_builder
-                gooeyfi_launcher
-                gooeyfi_core
-                Qt5::Widgets
-                rstats_utils
-                common_utils)
-
-
-#==============================================================================
-# Target Link Libraries
-#==============================================================================
-target_link_libraries(${CURR_TARGET}
-                      rstats_ui
-                      gooeyfi_builder
-                      gooeyfi_launcher
-                      gooeyfi_core
-                      Qt5::Widgets
-                      rstats_utils
-                      common_utils
-                      )
-
-# Copy templates folder to build directory
-# so that the exe can see them
-
-add_custom_command(TARGET ${CURR_TARGET} POST_BUILD
-               COMMAND ${CMAKE_COMMAND} -E copy_directory
-               ${PROJECT_SOURCE_DIR}/rstats_resx $<TARGET_FILE_DIR:${CURR_TARGET}>/resx)
-
-
-add_custom_command(TARGET ${CURR_TARGET} POST_BUILD
-              COMMAND ${CMAKE_COMMAND} -E copy_directory
-              ${PROJECT_SOURCE_DIR}/rstats_config $<TARGET_FILE_DIR:${CURR_TARGET}>/config)
-
-
+                 gooeyfi_launcher
+                 gooeyfi_core
+                 common_utils
+                )
 
 
