Added Major changes to rstats_main dialog
Updated common utilities with bugfixes and new features
Renamed module_definitions to .rstats_module_properties in RStats
Added .rstats_script_provider folder to config in RStats
Moved config dialogs/forms from rstats_main to rstats_ui
Refactored/cleaned up code for loading module properties in rstats_main
dialog
Added support for automatic key binding definitions to main dialog
Updated settings dialog to contain script provider settings and
eventually theme settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ if (WIN32)
     set (PLATFORM WIN32)
 endif()
 
+set (ENABLE_COMMON_UTILS_STATIC_LIB ON)
+
 include_directories("${PROJECT_SOURCE_DIR}/common")
 include_directories("${PROJECT_SOURCE_DIR}/products/RAT-STATS")
 include_directories("${PROJECT_SOURCE_DIR}/products/GooeyFi")
