Updated SSRN to to final state Added batch project Added features to XMLDataElement for returning direct number Added class for parsing text data files

--- a/products/RAT-STATS/CMakeLists.txt
+++ b/products/RAT-STATS/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_utils")
 add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_ui")
 add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_main")
 add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_launcher")
+add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_batch")
 
 #Built in Modules
 add_subdirectory("${PROJECT_SOURCE_DIR}/rstats_modules/SingleStageRandomNumbers")
