Updated utility classes with new functionality Added test cases for new utility functionality Updated ratstasts modules Updated RStatsWorksheet classes Added new resource for wizard Added new UI to SVA for wizard (may not need)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ if (WIN32)
 endif()
 
 set (ENABLE_COMMON_UTILS_STATIC_LIB ON)
+set (ENABLE_COMMON_UTILS_UNIT_TESTS ON)
 
 #Project Directories
 include_directories("${PROJECT_SOURCE_DIR}/common")
