Added unit test for workbook streams Added Data Interchange format workbook stream Updated CSV input/output to be less error prone Change SVA UI to save last used tables for data/size sheets instead of trying to store actual data Added ModuleSession interface classes and changed all modules to use it Added unit test to StringUtils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,10 @@ if (WIN32)
 endif()
 
 set (ENABLE_COMMON_UTILS_STATIC_LIB ON)
+
+#Unit tests
 set (ENABLE_COMMON_UTILS_UNIT_TESTS ON)
+set (ENABLE_RSTATS_UTILS_UNIT_TESTS ON)
 
 #Project Directories
 include_directories("${PROJECT_SOURCE_DIR}/common")
