--- a/products/test_TeamCBTek/CMakeLists.txt
+++ b/products/test_TeamCBTek/CMakeLists.txt
@@ -16,7 +16,6 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-find_package(Qt5Widgets REQUIRED)
 
 #==============================================================================
 # Include Source Files
@@ -36,12 +35,12 @@ add_executable(${CURR_TARGET}
 # Add Dependencies
 #==============================================================================
 
-#add_dependencies(${CURR_TARGET}  )
+add_dependencies(${CURR_TARGET} rstats_utils common_utils)
 
 #==============================================================================
 # Target Link Libraries
 #==============================================================================
-#target_link_libraries(${CURR_TARGET})
+target_link_libraries(${CURR_TARGET} rstats_utils common_utils)
 
 
 
