--- a/submission/rstats_source/products/RAT-STATS/rstats_modules/single_stage_random_numbers/CMakeLists.txt
+++ b/submission/rstats_source/products/RAT-STATS/rstats_modules/single_stage_random_numbers/CMakeLists.txt
@@ -45,8 +45,7 @@ qt5_use_modules(${CURR_TARGET}
                  Widgets)
 
 add_dependencies(${CURR_TARGET}
-                rstats_ui
-                Qt5::Widgets
+                rstats_ui                
                 rstats_utils
                 common_utils
                  )
@@ -56,9 +55,10 @@ add_dependencies(${CURR_TARGET}
 #==============================================================================
 target_link_libraries(${CURR_TARGET}
                         rstats_ui
-                        Qt5::Widgets
                         rstats_utils
-                        common_utils)
+                        common_utils
+                        Qt5::Widgets
+                        )
 
 
 
