--- a/products/RAT-STATS/rstats_main/CMakeLists.txt
+++ b/products/RAT-STATS/rstats_main/CMakeLists.txt
@@ -22,8 +22,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-find_package(Qt5Widgets REQUIRED)
-
+find_package(Qt5Widgets)
 #==============================================================================
 # Include Source Files
 #==============================================================================
@@ -36,7 +35,7 @@ file(GLOB CURR_TARGET_RESOURCES "resx/*.qrc")
 # Add Executable
 #==============================================================================
 add_executable(${CURR_TARGET}
-			   ${PLATFORM}
+               ${PLATFORM}
                ${CURR_TARGET_SOURCES}
                ${CURR_TARGET_HEADERS}
                ${CURR_TARGET_FORMS}
@@ -47,12 +46,10 @@ add_executable(${CURR_TARGET}
 # Add Dependencies
 #==============================================================================
 
-qt5_use_modules(${CURR_TARGET}
-                 Widgets)
+qt5_use_modules(${CURR_TARGET} Widgets)
 
 add_dependencies(${CURR_TARGET}
-                rstats_ui                
-                Qt5::Widgets
+                rstats_ui                                
                 rstats_utils
                 common_utils)
 
@@ -61,10 +58,10 @@ add_dependencies(${CURR_TARGET}
 # Target Link Libraries
 #==============================================================================
 target_link_libraries(${CURR_TARGET}
-                      rstats_ui                      
-                      Qt5::Widgets
+                      rstats_ui                                            
                       rstats_utils
-                      common_utils
+                      common_utils                
+                      Qt5::Widgets
                       )
 
 # Copy templates folder to build directory
