--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/CMakeLists.txt
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Widgets)
 
 #==============================================================================
 # Include Source Files
@@ -42,15 +42,14 @@ add_executable(${CURR_TARGET}
 # Add Dependencies
 #==============================================================================
 
-qt5_use_modules(${CURR_TARGET}
-                 Widgets)
+qt5_use_modules(${CURR_TARGET} Widgets)
 
 add_dependencies(${CURR_TARGET}
              rstats_ui
              rstats_utils
              common_utils
              basic_excel
-             mini_excel
+             mini_excel             
               )
 
 #==============================================================================
